# gear_sonic

./: .gitignore  README.md  pyproject.toml
data/human/: human_joints_info.pkl
data/robot_model/: __init__.py  robot_model.py
data/robot_model/instantiation/: __init__.py  g1.py
data/robot_model/supplemental_info/: __init__.py  robot_supplemental_info.py
data/robot_model/supplemental_info/g1/: g1_supplemental_info.py
isaac_utils/: rotations.py
scripts/: pico_manager_thread_server.py  run_sim_loop.py
trl/utils/: common.py  mujoco_fk_utils.py  mujoco_visualizer.py  vis_scenepic.py  vis_utils.py
trl/utils/smplx/: smplx_utils.py
trl/utils/smplx/body_model/: smplx_lite.py
utils/mujoco_sim/: base_sim.py  configs.py  unitree_sdk2py_bridge.py
utils/teleop/zmq/: zmq_planner_sender.py
