[build-system]
requires = ["setuptools>=67", "wheel", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "gear_sonic"
dynamic = ["version"]
readme = {text = "NVIDIA Gear Sonic - Whole Body Control", content-type = "text/plain"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "NVIDIA Gear Lab"}
]
requires-python = "~=3.10.0"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.15.3",
    "torch",
]
license = {text = "Apache-2.0"}

[project.optional-dependencies]
# Teleop: minimal deps for running ZMQ-based teleop
# pico_manager_thread_server.py + visualization (pyzmq, pyvista, pinocchio FK)
# Usage: pip install -e "gear_sonic[teleop]"
teleop = [
    "pyzmq",
    "msgpack",
    "pin",
    "pyvista; platform_machine != 'aarch64'",
]
# MuJoCo simulation (run_sim_loop.py and related scripts)
# Usage: pip install -e "gear_sonic[sim]"
sim = [
    "mujoco",
    "tyro",
    "pin",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["gear_sonic*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
gear_sonic = ["py.typed", "**/*.json", "**/*.yaml"]

[tool.setuptools.dynamic]
version = {attr = "gear_sonic.version.VERSION"}